feature(single task): done status
- add done status to single task
- toggle status on button click
- add `classnames` to handle dynamic classes
- add css to handle style change for done tasks

--- a/src/component/SingleTask.css
+++ b/src/component/SingleTask.css
@@ -1,4 +1,7 @@
-.task-container  {
-    display:flex;
-    flex-direction: row;
+.task-container {
+  display: flex;
+  flex-direction: row;
+}
+.done {
+  text-decoration: line-through;
 }
