improvement (client): add material ui
- add material ui
- make button and task list look better

--- a/ts-client/src/app/component/SingleTask.css
+++ b/ts-client/src/app/component/SingleTask.css
@@ -2,6 +2,15 @@
   display: flex;
   flex-direction: row;
 }
+.priority-container {
+  display:flex;
+  flex-direction: column;
+}
 .done {
   text-decoration: line-through;
+}
+.single-task-paper
+{
+  margin-top:25px;
+  margin-bottom:25px;
 }
