--- a/ts-client/src/app/index.html
+++ b/ts-client/src/app/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
-    <title>React with Typescript and Webpack</title>
+    <title>Simple Todo</title>
 </head>
 
 <body>
